Finalized structure for trending games

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <ul class="carousel-list">
                         <!-- Game 1 -->
                         <li class="carousel-item">
+                            <a href="#">
                             <article class="game-card" style="background-image: url('/assets/lotr-placeholder.png');">
                                 <div class="game-card-top-elements">
                                     <span class="rating">
@@ -68,9 +69,7 @@
                                 <header class="game-card-header">
                                     <h3>Fate of the Fellowship</h3>
                                     <p>
-                                        As members of The Fellowship and the allies who rise to aid them, you 
-                                        must embark on a journey that may either save or doom Middle-earth.  
-                                        Navigate a world beset by shadow, where every choice forges a new path.
+                                        As members of The Fellowship, embark on a journey to save—or doom—Middle-earth. 
                                     </p>
                                 </header>
                                 <div class="game-labels">
@@ -91,16 +90,18 @@
                                     </span>
                                 </div>
                             </article>
+                            </a>
                         </li>
                         <!-- Game 2 -->
                         <li class="carousel-item">
-                            <article class="game-card">
+                            <a href="#">
+                            <article class="game-card" style="background-image: url('/assets/feya-placeholder.png');">
                                 <div class="game-card-top-elements">
                                     <span class="rating">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M7.45806 0.335814C7.60741 0.0375814 7.97024 -0.0849184 8.26861 0.0623764C8.38737 0.120898 8.48352 0.21706 8.54204 0.335814L10.6866 4.68347L15.4825 5.37976C15.8131 5.42888 16.0442 5.73569 15.9932 6.06628C15.9742 6.19832 15.9118 6.31954 15.8174 6.41199L12.3467 9.7948L13.167 14.5721C13.2236 14.9007 13.0024 15.2127 12.6739 15.2694C12.5436 15.2921 12.4072 15.2712 12.2901 15.2089L8.00005 12.954L3.71001 15.2089C3.6103 15.2615 3.49729 15.2852 3.38482 15.2772C3.27247 15.2691 3.16444 15.2301 3.07329 15.1639C2.98206 15.0977 2.91163 15.0067 2.86919 14.9022C2.82681 14.7978 2.81387 14.6832 2.83306 14.5721L3.65337 9.7948L0.18267 6.41199C0.0678325 6.30004 0.00226246 6.14655 5.27499e-05 5.9862C-0.00207205 5.82578 0.0600749 5.67055 0.171928 5.55554C0.26444 5.46127 0.385561 5.39864 0.517631 5.37976L5.31353 4.68347L7.45806 0.335814ZM6.80865 5.42077C6.56593 5.91248 6.0964 6.25291 5.55376 6.33191L2.88677 6.7196L4.81646 8.60144C5.2092 8.98437 5.38873 9.5364 5.29595 10.077L4.8399 12.7323L7.22466 11.4784C7.71014 11.2232 8.28996 11.2232 8.77544 11.4784L11.1602 12.7323L10.7042 10.077C10.6114 9.53642 10.7909 8.98437 11.1836 8.60144L13.1133 6.7196L10.4463 6.33191C9.9037 6.25291 9.43417 5.9125 9.19146 5.42077L8.00005 3.00476L6.80865 5.42077Z" fill="#FFFF57"/>
                                         </svg>
-                                        9.4
+                                        8.6
                                     </span>
                                     <button class="favorite-button" aria-label="Add to favorites">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -109,11 +110,9 @@
                                     </button>
                                 </div>
                                 <header class="game-card-header">
-                                    <h3>Fate of the Fellowship</h3>
+                                    <h3>Feya's Swamp</h3>
                                     <p>
-                                        As members of The Fellowship and the allies who rise to aid them, you 
-                                        must embark on a journey that may either save or doom Middle-earth.  
-                                        Navigate a world beset by shadow, where every choice forges a new path.
+                                        Rise as the most prosperous clan in this magical swamp.
                                     </p>
                                 </header>
                                 <div class="game-labels">
@@ -124,26 +123,28 @@
                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
                                         </svg>
-                                        1-5
+                                        2-4
                                     </span>
                                     <span class="game-tag">
                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
                                         </svg>
-                                        80 min
+                                        50 min
                                     </span>
                                 </div>
                             </article>
+                            </a>
                         </li>
                         <!-- Game 3 -->
                         <li class="carousel-item">
-                            <article class="game-card">
+                            <a href="#">
+                            <article class="game-card" style="background-image: url('/assets/vantage-placeholder.png');">
                                 <div class="game-card-top-elements">
                                     <span class="rating">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M7.45806 0.335814C7.60741 0.0375814 7.97024 -0.0849184 8.26861 0.0623764C8.38737 0.120898 8.48352 0.21706 8.54204 0.335814L10.6866 4.68347L15.4825 5.37976C15.8131 5.42888 16.0442 5.73569 15.9932 6.06628C15.9742 6.19832 15.9118 6.31954 15.8174 6.41199L12.3467 9.7948L13.167 14.5721C13.2236 14.9007 13.0024 15.2127 12.6739 15.2694C12.5436 15.2921 12.4072 15.2712 12.2901 15.2089L8.00005 12.954L3.71001 15.2089C3.6103 15.2615 3.49729 15.2852 3.38482 15.2772C3.27247 15.2691 3.16444 15.2301 3.07329 15.1639C2.98206 15.0977 2.91163 15.0067 2.86919 14.9022C2.82681 14.7978 2.81387 14.6832 2.83306 14.5721L3.65337 9.7948L0.18267 6.41199C0.0678325 6.30004 0.00226246 6.14655 5.27499e-05 5.9862C-0.00207205 5.82578 0.0600749 5.67055 0.171928 5.55554C0.26444 5.46127 0.385561 5.39864 0.517631 5.37976L5.31353 4.68347L7.45806 0.335814ZM6.80865 5.42077C6.56593 5.91248 6.0964 6.25291 5.55376 6.33191L2.88677 6.7196L4.81646 8.60144C5.2092 8.98437 5.38873 9.5364 5.29595 10.077L4.8399 12.7323L7.22466 11.4784C7.71014 11.2232 8.28996 11.2232 8.77544 11.4784L11.1602 12.7323L10.7042 10.077C10.6114 9.53642 10.7909 8.98437 11.1836 8.60144L13.1133 6.7196L10.4463 6.33191C9.9037 6.25291 9.43417 5.9125 9.19146 5.42077L8.00005 3.00476L6.80865 5.42077Z" fill="#FFFF57"/>
                                         </svg>
-                                        9.4
+                                        8.2
                                     </span>
                                     <button class="favorite-button" aria-label="Add to favorites">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -152,11 +153,9 @@
                                     </button>
                                 </div>
                                 <header class="game-card-header">
-                                    <h3>Fate of the Fellowship</h3>
+                                    <h3>Vantage</h3>
                                     <p>
-                                        As members of The Fellowship and the allies who rise to aid them, you 
-                                        must embark on a journey that may either save or doom Middle-earth.  
-                                        Navigate a world beset by shadow, where every choice forges a new path.
+                                        Cooperatively explore an entire planet's open world from first-person perspectives.
                                     </p>
                                 </header>
                                 <div class="game-labels">
@@ -167,16 +166,17 @@
                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
                                         </svg>
-                                        1-5
+                                        2-6
                                     </span>
                                     <span class="game-tag">
                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
                                         </svg>
-                                        80 min
+                                        160 min
                                     </span>
                                 </div>
                             </article>
+                            </a>
                         </li>
                     </ul>
                 </div>
