--- a/index.html
+++ b/index.html
@@ -180,7 +180,163 @@
                         </li>
                     </ul>
                 </div>
-                
+            </section>
+            <section class="recommended-games">
+                <h2>BGG Ranking</h2>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <article>
+                                <div class="recommended-game-cover" style="background-image: url(/assets/brass-placeholder.png)">
+                                    <button class="favorite-button" aria-label="Add to favorites">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.87324 2.08771C3.82206 0.483984 6.28378 0.785442 7.99922 2.11603C9.70999 0.785276 12.1403 0.504104 14.1076 2.07892C16.3287 3.85718 16.6043 6.91744 14.884 9.04962C14.2554 9.82867 13.0452 10.9815 11.9025 12.0203C11.3212 12.5489 10.7402 13.0631 10.2336 13.5057L9.00898 14.5633C8.95738 14.6073 8.87527 14.678 8.79512 14.7361C8.70252 14.8033 8.56147 14.8925 8.37129 14.9471C8.1877 14.9997 7.99442 15.0125 7.80586 14.9861L7.61934 14.9471C7.42937 14.8925 7.28816 14.8033 7.19551 14.7361L6.98164 14.5633C6.4103 14.076 5.25157 13.0771 4.08906 12.0203C2.94628 10.9814 1.73533 9.82877 1.10664 9.04962C-0.62295 6.90587 -0.293463 3.87083 1.87324 2.08771ZM7.25215 4.14337C6.13047 2.88049 4.39584 2.60129 3.14375 3.63165C1.80369 4.73453 1.63901 6.52425 2.66328 7.79376C3.1795 8.43353 4.274 9.48648 5.43379 10.5408C6.40551 11.4242 7.37988 12.2666 7.99531 12.7947C8.61074 12.2666 9.58505 11.4243 10.5568 10.5408C11.7166 9.48648 12.8111 8.43356 13.3273 7.79376L13.507 7.54767C14.3364 6.29104 14.1192 4.65057 12.8576 3.64044C11.5658 2.6063 9.86283 2.88846 8.74824 4.14337C8.55847 4.35706 8.28599 4.47931 8.0002 4.47931C7.71441 4.47931 7.44192 4.35706 7.25215 4.14337Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="recommended-game-info">
+                                    <header class="game-card-header">
+                                        <h3>Brass</h3>
+                                        <p>
+                                            Cooperatively explore an entire planet's open world from first-person perspectives.
+                                        </p>
+                                    </header>
+                                    <div class="game-labels">
+                                        <span class="game-tag">
+                                            2025
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
+                                            </svg>
+                                            2-6
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
+                                            </svg>
+                                            160 min
+                                        </span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <article>
+                                <div class="recommended-game-cover" style="background-image: url(/assets/brass-placeholder.png)">
+                                    <button class="favorite-button" aria-label="Add to favorites">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.87324 2.08771C3.82206 0.483984 6.28378 0.785442 7.99922 2.11603C9.70999 0.785276 12.1403 0.504104 14.1076 2.07892C16.3287 3.85718 16.6043 6.91744 14.884 9.04962C14.2554 9.82867 13.0452 10.9815 11.9025 12.0203C11.3212 12.5489 10.7402 13.0631 10.2336 13.5057L9.00898 14.5633C8.95738 14.6073 8.87527 14.678 8.79512 14.7361C8.70252 14.8033 8.56147 14.8925 8.37129 14.9471C8.1877 14.9997 7.99442 15.0125 7.80586 14.9861L7.61934 14.9471C7.42937 14.8925 7.28816 14.8033 7.19551 14.7361L6.98164 14.5633C6.4103 14.076 5.25157 13.0771 4.08906 12.0203C2.94628 10.9814 1.73533 9.82877 1.10664 9.04962C-0.62295 6.90587 -0.293463 3.87083 1.87324 2.08771ZM7.25215 4.14337C6.13047 2.88049 4.39584 2.60129 3.14375 3.63165C1.80369 4.73453 1.63901 6.52425 2.66328 7.79376C3.1795 8.43353 4.274 9.48648 5.43379 10.5408C6.40551 11.4242 7.37988 12.2666 7.99531 12.7947C8.61074 12.2666 9.58505 11.4243 10.5568 10.5408C11.7166 9.48648 12.8111 8.43356 13.3273 7.79376L13.507 7.54767C14.3364 6.29104 14.1192 4.65057 12.8576 3.64044C11.5658 2.6063 9.86283 2.88846 8.74824 4.14337C8.55847 4.35706 8.28599 4.47931 8.0002 4.47931C7.71441 4.47931 7.44192 4.35706 7.25215 4.14337Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="recommended-game-info">
+                                    <header class="game-card-header">
+                                        <h3>Brass</h3>
+                                        <p>
+                                            Cooperatively explore an entire planet's open world from first-person perspectives.
+                                        </p>
+                                    </header>
+                                    <div class="game-labels">
+                                        <span class="game-tag">
+                                            2025
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
+                                            </svg>
+                                            2-6
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
+                                            </svg>
+                                            160 min
+                                        </span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <article>
+                                <div class="recommended-game-cover" style="background-image: url(/assets/brass-placeholder.png)">
+                                    <button class="favorite-button" aria-label="Add to favorites">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.87324 2.08771C3.82206 0.483984 6.28378 0.785442 7.99922 2.11603C9.70999 0.785276 12.1403 0.504104 14.1076 2.07892C16.3287 3.85718 16.6043 6.91744 14.884 9.04962C14.2554 9.82867 13.0452 10.9815 11.9025 12.0203C11.3212 12.5489 10.7402 13.0631 10.2336 13.5057L9.00898 14.5633C8.95738 14.6073 8.87527 14.678 8.79512 14.7361C8.70252 14.8033 8.56147 14.8925 8.37129 14.9471C8.1877 14.9997 7.99442 15.0125 7.80586 14.9861L7.61934 14.9471C7.42937 14.8925 7.28816 14.8033 7.19551 14.7361L6.98164 14.5633C6.4103 14.076 5.25157 13.0771 4.08906 12.0203C2.94628 10.9814 1.73533 9.82877 1.10664 9.04962C-0.62295 6.90587 -0.293463 3.87083 1.87324 2.08771ZM7.25215 4.14337C6.13047 2.88049 4.39584 2.60129 3.14375 3.63165C1.80369 4.73453 1.63901 6.52425 2.66328 7.79376C3.1795 8.43353 4.274 9.48648 5.43379 10.5408C6.40551 11.4242 7.37988 12.2666 7.99531 12.7947C8.61074 12.2666 9.58505 11.4243 10.5568 10.5408C11.7166 9.48648 12.8111 8.43356 13.3273 7.79376L13.507 7.54767C14.3364 6.29104 14.1192 4.65057 12.8576 3.64044C11.5658 2.6063 9.86283 2.88846 8.74824 4.14337C8.55847 4.35706 8.28599 4.47931 8.0002 4.47931C7.71441 4.47931 7.44192 4.35706 7.25215 4.14337Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="recommended-game-info">
+                                    <header class="game-card-header">
+                                        <h3>Brass</h3>
+                                        <p>
+                                            Cooperatively explore an entire planet's open world from first-person perspectives.
+                                        </p>
+                                    </header>
+                                    <div class="game-labels">
+                                        <span class="game-tag">
+                                            2025
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
+                                            </svg>
+                                            2-6
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
+                                            </svg>
+                                            160 min
+                                        </span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <article>
+                                <div class="recommended-game-cover" style="background-image: url(/assets/brass-placeholder.png)">
+                                    <button class="favorite-button" aria-label="Add to favorites">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.87324 2.08771C3.82206 0.483984 6.28378 0.785442 7.99922 2.11603C9.70999 0.785276 12.1403 0.504104 14.1076 2.07892C16.3287 3.85718 16.6043 6.91744 14.884 9.04962C14.2554 9.82867 13.0452 10.9815 11.9025 12.0203C11.3212 12.5489 10.7402 13.0631 10.2336 13.5057L9.00898 14.5633C8.95738 14.6073 8.87527 14.678 8.79512 14.7361C8.70252 14.8033 8.56147 14.8925 8.37129 14.9471C8.1877 14.9997 7.99442 15.0125 7.80586 14.9861L7.61934 14.9471C7.42937 14.8925 7.28816 14.8033 7.19551 14.7361L6.98164 14.5633C6.4103 14.076 5.25157 13.0771 4.08906 12.0203C2.94628 10.9814 1.73533 9.82877 1.10664 9.04962C-0.62295 6.90587 -0.293463 3.87083 1.87324 2.08771ZM7.25215 4.14337C6.13047 2.88049 4.39584 2.60129 3.14375 3.63165C1.80369 4.73453 1.63901 6.52425 2.66328 7.79376C3.1795 8.43353 4.274 9.48648 5.43379 10.5408C6.40551 11.4242 7.37988 12.2666 7.99531 12.7947C8.61074 12.2666 9.58505 11.4243 10.5568 10.5408C11.7166 9.48648 12.8111 8.43356 13.3273 7.79376L13.507 7.54767C14.3364 6.29104 14.1192 4.65057 12.8576 3.64044C11.5658 2.6063 9.86283 2.88846 8.74824 4.14337C8.55847 4.35706 8.28599 4.47931 8.0002 4.47931C7.71441 4.47931 7.44192 4.35706 7.25215 4.14337Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="recommended-game-info">
+                                    <header class="game-card-header">
+                                        <h3>Brass</h3>
+                                        <p>
+                                            Cooperatively explore an entire planet's open world from first-person perspectives.
+                                        </p>
+                                    </header>
+                                    <div class="game-labels">
+                                        <span class="game-tag">
+                                            2025
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.79822 4.85916C4.17273 4.35941 3.77202 3.59014 3.77202 2.72727C3.77202 1.22104 4.99306 0 6.49929 0C8.00551 0 9.22656 1.22104 9.22656 2.72727C9.22656 3.58985 8.82609 4.35891 8.201 4.85866L9.26894 7.5726C9.60107 8.41669 9.77284 9.33169 9.77284 10.2572V11.4545C9.77284 11.7558 9.52864 12 9.22738 12H3.77202C3.47077 12 3.22656 11.7558 3.22656 11.4545V10.2572C3.22656 9.33169 3.39831 8.41669 3.73046 7.5726L4.79822 4.85916Z" fill="white"/>
+                                            </svg>
+                                            2-6
+                                        </span>
+                                        <span class="game-tag">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M6.20072 0H6.19977C3.72022 0 2.48019 3.45111e-05 2.11872 0.779297C2.08772 0.846166 2.06167 0.915917 2.04059 0.987305C1.79515 1.81962 2.67186 2.78449 4.42536 4.71387L5.59918 6L4.42536 7.28613C2.67187 9.21549 1.79515 10.1804 2.04059 11.0127C2.06167 11.0841 2.08772 11.1538 2.11872 11.2207C2.48019 12 3.72023 12 6.19977 12H6.20076C8.67967 12 9.9195 12 10.2808 11.2207C10.3119 11.1538 10.3379 11.0841 10.3589 11.0127C10.6044 10.1804 9.72764 9.21544 7.97418 7.28613L6.79938 6L7.97418 4.71387C9.72763 2.78455 10.6044 1.81961 10.3589 0.987305C10.3379 0.915878 10.3119 0.8462 10.2808 0.779297C9.91951 0 8.67966 0 6.20072 0Z" fill="white"/>
+                                            </svg>
+                                            160 min
+                                        </span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </li>
+                </ul>
             </section>
         </main>
         <script src="index.js"></script>
